linuxstuff/installation/iptables
# Generated by iptables-save v1.4.7 on Tue Jun 13 15:04:14 2017
*mangle
:PREROUTING ACCEPT [12:1905]
:INPUT ACCEPT [12:1905]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3:448]
:POSTROUTING ACCEPT [3:448]
COMMIT
# Completed on Tue Jun 13 15:04:14 2017
# Generated by iptables-save v1.4.7 on Tue Jun 13 15:04:14 2017
*nat
:PREROUTING ACCEPT [7:648]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Tue Jun 13 15:04:14 2017
# Generated by iptables-save v1.4.7 on Tue Jun 13 15:04:14 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:log-acpt-in - [0:0]
:log-acpt-out - [0:0]
:log-drop-in - [0:0]
:log-drop-out - [0:0]
:log-out-spc - [0:0]
-A INPUT -s 142.90.0.0/16 -i eth0 -p udp -m udp --dport 67 -j DROP 
-A INPUT -s 142.90.0.0/16 -i eth0 -p udp -m udp --dport 68 -j DROP 
-A INPUT -s 142.90.0.0/16 -i eth0 -p udp -m udp --dport 137 -j DROP 
-A INPUT -s 142.90.0.0/16 -i eth0 -p udp -m udp --dport 138 -j DROP 
-A INPUT -s 142.90.0.0/16 -i eth0 -p udp -m udp --dport 1604 -j DROP 
-A INPUT -s 142.90.0.0/16 -i eth0 -p udp -m udp --dport 9064 -j DROP 
-A INPUT -s 142.90.0.0/16 -i eth0 -p udp -m udp --dport 111 -j ACCEPT 
-A INPUT -s 142.90.0.0/16 -i eth0 -p udp -m udp --dport 8649 -j ACCEPT 
-A INPUT -s 142.90.0.0/16 -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -s 142.90.0.0/16 -i eth0 -p tcp -m tcp --dport 111 -j ACCEPT 
-A INPUT -s 142.90.0.0/16 -i eth0 -p tcp -m tcp --dport 2967 -j ACCEPT 
-A INPUT -s 0.0.0.0/32 -i eth0 -j DROP 
-A INPUT -s 192.168.0.0/16 -i eth0 -j DROP 
-A INPUT -s 81.211.0.0/16 -i eth0 -j DROP 
-A INPUT -s 142.90.117.13/32 -i eth0 -j DROP 
-A INPUT -s 130.15.24.49/32 -i eth0 -m state --state NEW -j log-acpt-in 
-A INPUT -s 96.49.155.185/32 -i eth0 -m state --state NEW -j log-acpt-in 
-A INPUT -s 131.104.153.83/32 -i eth0 -m state --state NEW -j log-acpt-in 
-A INPUT -s 209.254.38.131/32 -i eth0 -m state --state NEW -j log-acpt-in 
-A INPUT -s 35.9.60.125/32 -i eth0 -m state --state NEW -j log-acpt-in 
-A INPUT -s 131.227.76.238/32 -i eth0 -m state --state NEW -j log-acpt-in 
-A INPUT -s 128.189.193.62/32 -i eth0 -m state --state NEW -j log-acpt-in 
-A INPUT -s 24.80.120.179/32 -i eth0 -m state --state NEW -j log-acpt-in 
-A INPUT -s 131.104.153.240/32 -i eth0 -m state --state NEW -j log-acpt-in 
-A INPUT -s 206.12.26.11/32 -i eth0 -m state --state NEW -j log-acpt-in 
-A INPUT -s 206.12.26.12/32 -i eth0 -m state --state NEW -j log-acpt-in 
-A INPUT -s 206.12.26.13/32 -i eth0 -m state --state NEW -j log-acpt-in 
-A INPUT -s 24.207.79.66/32 -i eth0 -m state --state NEW -j log-acpt-in 
-A INPUT -s 207.81.232.76/32 -i eth0 -m state --state NEW -j log-acpt-in 
-A INPUT -s 142.90.0.0/16 -d 255.255.255.255/32 -i eth0 -j ACCEPT 
-A INPUT -s 142.90.0.0/16 -d 142.90.127.255/32 -i eth0 -j ACCEPT 
-A INPUT -s 142.90.0.0/16 -d 142.90.96.0/32 -i eth0 -j ACCEPT 
-A INPUT -s 142.90.0.0/16 -d 224.0.0.0/8 -i eth0 -j ACCEPT 
-A INPUT -s 142.90.0.0/16 -d 239.2.11.71/32 -i eth0 -j ACCEPT 
-A INPUT -s 142.90.0.0/16 -i eth0 -p udp -m udp --sport 111 -j ACCEPT 
-A INPUT -s 142.90.0.0/16 -i eth0 -m state --state NEW -j log-acpt-in 
-A INPUT -i eth0 -p tcp -m tcp --dport 8081 -m state --state NEW -j log-acpt-in 
-A INPUT -i eth0 -p tcp -m tcp --dport 80 -m state --state NEW -j log-acpt-in 
-A INPUT -i eth0 -p tcp -m tcp --dport 8082 -m state --state NEW -j log-acpt-in 
-A INPUT -i eth0 -p tcp -m tcp --dport 9093 -m state --state NEW -j log-acpt-in 
-A INPUT -i eth0 -m state --state INVALID,NEW -j log-drop-in 
-A INPUT -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -o eth0 -p udp -m udp --dport 53 -j ACCEPT 
-A OUTPUT -o eth0 -p udp -m udp --dport 111 -j ACCEPT 
-A OUTPUT -o eth0 -p udp -m udp --dport 123 -j ACCEPT 
-A OUTPUT -o eth0 -p udp -m udp --dport 514 -j ACCEPT 
-A OUTPUT -o eth0 -p udp -m udp --dport 886 -j ACCEPT 
-A OUTPUT -o eth0 -p udp -m udp --dport 2049 -j ACCEPT 
-A OUTPUT -o eth0 -p udp -m udp --dport 8649 -j ACCEPT 
-A OUTPUT -o eth0 -p udp -m udp --dport 12134 -j ACCEPT 
-A OUTPUT -o eth0 -p udp -m udp --dport 32772 -j ACCEPT 
-A OUTPUT -o eth0 -p tcp -m tcp --dport 111 -j ACCEPT 
-A OUTPUT -o eth0 -p tcp -m tcp --dport 765 -j ACCEPT 
-A OUTPUT -o eth0 -p tcp -m tcp --dport 886 -j ACCEPT 
-A OUTPUT -o eth0 -p tcp -m tcp --dport 889 -j ACCEPT 
-A OUTPUT -o eth0 -p tcp -m tcp --dport 1016 -j ACCEPT 
-A OUTPUT -o eth0 -p tcp -m tcp --dport 9090 -j ACCEPT 
-A OUTPUT -o eth0 -p tcp -m tcp --dport 9091 -j ACCEPT 
-A OUTPUT -o eth0 -p tcp -m tcp --dport 32770 -j ACCEPT 
-A OUTPUT -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -o eth0 -p tcp -m tcp --dport 80 -m state --state INVALID,NEW -j ACCEPT 
-A OUTPUT -o eth0 -p udp -m udp --sport 111 -j ACCEPT 
-A OUTPUT -o eth0 -m state --state INVALID,NEW -j log-acpt-out 
-A log-acpt-in -j LOG --log-prefix "Accept   Input " --log-level 7 
-A log-acpt-in -j ACCEPT 
-A log-acpt-out -j LOG --log-prefix "Accept  Output " --log-level 7 
-A log-acpt-out -j ACCEPT 
-A log-drop-in -j LOG --log-prefix "Drop     Input " --log-level 7 
-A log-drop-in -j DROP 
-A log-drop-out -j LOG --log-prefix "Drop    Output " --log-level 7 
-A log-drop-out -j DROP 
-A log-out-spc -j LOG --log-prefix "Accept  Special " --log-level 7 
-A log-out-spc -j ACCEPT 
COMMIT
# Completed on Tue Jun 13 15:04:14 2017
